Fixed grid overlapping

--- a/index.css
+++ b/index.css
@@ -56,6 +56,7 @@
   transform: translateY(-50%);
   text-align: center;
   color: #fff;
+  height: 75%;
 }
 .content h1 {
   font-size: 70px;
